<resources xmlns:xliff="http://schemas.android.com/tools">
    <!-- Until we plan to release it in multiple language, using translatable=false -->
    <string name="app_name" translatable="false">Filmie</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="action_favourite" translatable="false">Favourite</string>
    <string name="contentauthority" translatable="false">com.amrendra.popularmovies</string>
    <string name="sync_account_type" translatable="false">popularmovies.amrendra.com</string>

    <!-- Menu Items -->
    <string name="action_sort_popularity" translatable="false">Popular</string>
    <string name="action_sort_year" translatable="false">Highest Rated</string>
    <string name="action_sort_favourite" translatable="false">Favourites</string>
    <string name="action_search" translatable="false">User Search</string>
    <string name="search_title" translatable="false">Search here</string>
    <!-- sort by -->
    <string name="sort_popularity_label" translatable="false">Popular</string>
    <string name="sort_ratings_label" translatable="false">By Ratings</string>
    <string name="sort_favourite_label" translatable="false">Favourites</string>

    <string-array name="string_sort_by" translatable="false">
        <item>@string/sort_popularity_label</item>
        <item>@string/sort_ratings_label</item>
        <item>@string/sort_favourite_label</item>
    </string-array>


    <string name="detail_overview" translatable="false">Overview</string>
    <string name="detail_trailer" translatable="false">Trailers</string>
    <string name="detail_reviews" translatable="false">Reviews</string>

    <string name="movie_loading" translatable="false">Please wait while movie <xliff:g example="Iron Man" id="load_search_results_name">%1$s</xliff:g> is loaded.</string>

    <string name="review_by" translatable="false">By:</string>
    <string name="no_detail_reviews" translatable="false">No reviews!!</string>
    <string name="no_detail_trailers" translatable="false">No Trailers!!</string>

    <string name="load_search_results" translatable="false">Search results for <xliff:g example="Iron Man" id="load_search_results_name">%1$s</xliff:g>.</string>

    <string name="error_load_search_results" translatable="false">Error in loading search results for <xliff:g example="Iron Man" id="load_search_results_name">%1$s</xliff:g>.</string>

    <string name="select_movie" translatable="false">Please select a movie</string>
    <string name="error_movie_list" translatable="false"><xliff:g example="Network Error" id="movie_error">%1$s</xliff:g> in fetching movies.</string>
    <string name="error_movie_list_more" translatable="false"><xliff:g example="Network Error" id="movie_error">%1$s</xliff:g> in fetching more movies.</string>
    <string name="error_detail_reviews" translatable="false"><xliff:g example="Network Error" id="review_error">%1$s</xliff:g> in fetching reviews.</string>
    <string name="error_detail_trailers" translatable="false"><xliff:g example="Network Error" id="trailer_error">%1$s</xliff:g> in fetching Trailers.</string>

    <string name="review_by_author" translatable="false">By: <xliff:g example="Amrendra Kumar " id="review_by_author">%1$s</xliff:g></string>

    <string name="release_date" translatable="false">Release Date</string>
    <string name="original_title" translatable="false">Original Title</string>
    <string name="original_language" translatable="false">Original Language</string>
    <string name="imdb" translatable="false">IMDB</string>
    <string name="homepage" translatable="false">Homepage</string>
    <string name="revenue" translatable="false">Revenue</string>
    <string name="time" translatable="false">Length</string>
    <string name="tagline" translatable="false">Tagline</string>
    <string name="genre" translatable="false">Genre</string>
    <string name="rating" translatable="false">Rating</string>

    <string name="playing_trailer">Please wait while we load trailer</string>
    <string name="poster_desc">Movie Poster</string>
    <string name="trailer_desc">Trailer image</string>
    <string name="movie_thumbnails">Movie Thumbnails</string>
</resources>
