<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <group
        android:checkableBehavior="single"
        android:enabled="true">
        <item
            android:id="@+id/action_sort_popularity"
            android:orderInCategory="100"
            android:title="@string/action_sort_popularity"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_sort_year"
            android:orderInCategory="101"
            android:title="@string/action_sort_year"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_sort_favourite"
            android:orderInCategory="102"
            android:title="@string/action_sort_favourite"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_sort_search"
            android:orderInCategory="103"
            android:title="@string/action_search"
            app:showAsAction="never"/>
    </group>
</menu>