<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    style="@style/FillContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_container"
        style="@style/FillContainer"
        android:layout_marginBottom="@dimen/title_layout_margin_bottom"
        android:layout_marginTop="@dimen/title_layout_margin_top"
        android:orientation="vertical"
        android:padding="@dimen/title_layout_padding">

        <com.amrendra.popularmovies.app.views.MovieTitleTextView
            android:id="@+id/overview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_title_overview_text_size"
            tools:text="Movie Name"/>

        <com.amrendra.popularmovies.app.views.MovieTaglineTextView
            android:id="@+id/overview_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_year_overview_text_size"
            tools:text="2015"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/preview_details_container"
        style="@style/FillContainer"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/title_layout_margin_bottom"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/title_layout_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.amrendra.popularmovies.app.views.ContentHeadingTextView
                android:id="@+id/detail_content_heading_rating_tv"
                style="@style/TableEntryHead"
                android:text="@string/rating"/>

            <com.amrendra.popularmovies.app.views.ContentHeadingTextView
                android:id="@+id/detail_overview_card_ratings"
                style="@style/TableEntryRow"
                tools:text="7.8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.amrendra.popularmovies.app.views.ContentHeadingTextView
                android:id="@+id/detail_content_heading_runtime_tv"
                style="@style/TableEntryHead"
                android:text="@string/time"/>

            <com.amrendra.popularmovies.app.views.ContentHeadingTextView
                android:id="@+id/detail_time_tv"
                style="@style/TableEntryRow"
                tools:text="129 mins"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.amrendra.popularmovies.app.views.ContentHeadingTextView
                android:id="@+id/detail_content_heading_genre_tv"
                style="@style/TableEntryHead"
                android:text="@string/genre"/>

            <com.amrendra.popularmovies.app.views.ContentHeadingTextView
                android:id="@+id/detail_genre_tv"
                style="@style/TableEntryRow"
                tools:text="Action Sci-Fi Comedy"/>
        </LinearLayout>
    </LinearLayout>

    <com.amrendra.popularmovies.app.views.OverviewContentTextView
        android:id="@+id/detail_overview_card_content"
        style="@style/CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_text_size"/>

</LinearLayout>